@@ -3,7 +3,7 @@
 namespace SmartWin {
 
 Button::Seed::Seed(const SmartUtil::tstring& caption, DWORD style) : 
-	BaseType::Seed(WC_BUTTON, style | WS_CHILD, 0, caption),
+	BaseType::Seed(WC_BUTTON, style | WS_CHILD | WS_TABSTOP, 0, caption),
 	font(new Font(DefaultGuiFont))
 {
 }
