@@ -30,7 +30,7 @@ TextFrame::TextFrame(SmartWin::WidgetTabView* mdiParent, const string& fileName)
 	pad(0) 
 {
 	TextBox::Seed cs = WinUtil::Seeds::textBox;
-	cs.style = WS_CHILD | WS_VISIBLE | WS_VSCROLL | ES_AUTOVSCROLL | ES_MULTILINE | ES_NOHIDESEL | ES_READONLY;
+	cs.style |= WS_VSCROLL | ES_AUTOVSCROLL | ES_MULTILINE | ES_NOHIDESEL | ES_READONLY;
 	cs.font = WinUtil::monoFont;
 	pad = addChild(cs);
 	addWidget(pad);
